--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
+        "axios": "^1.12.2",
         "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
@@ -19,6 +19,13 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^6.0.1",
-        "vue": "^3.5.22"
+        "chalk": "^5.6.2",
+        "dotenv": "^17.2.3",
+        "googleapis": "^164.1.0",
+        "openai": "^6.7.0",
+        "qrcode-terminal": "^0.12.0",
+        "readline-sync": "^1.4.10",
+        "vue": "^3.5.22",
+        "whatsapp-web.js": "^1.23.0"
     }
 }
